--- a/3-jednostki-miary-w-css/index.html
+++ b/3-jednostki-miary-w-css/index.html
@@ -9,9 +9,19 @@
 </head>
 
 <body>
+    <div id="container">
+        <div id="pixele">400px</div>
+        <div id="em">20em</div>
+        <div id="ex">20ex</div>
+        <div id="rem">20rem</div>
+        <div id="procenty">procenty40</div>
+        <div id="vw">60vw</div>
+        <div id="vh">60vh</div>
+        <div id="vmin">vmin60</div>
+        <div id="vmax">vmax60</div>
 
 
-
+    </div>
 </body>
 
 </html>
