stylowanie strony zakonczone

--- a/stylowanie-strony/index.html
+++ b/stylowanie-strony/index.html
@@ -10,14 +10,15 @@
 
 <body>
 
-
+ 
     <nav id="menu">
         <ul>
             <li class="menu-item"><a href="#">Home</a></li>
             <li class="menu-item"><a href="#about">O mnie</a></li>
             <li class="menu-item"><a href="#contact">Kontakt</a></li>
-        </ul>
+        </ul> 
     </nav>
+    
 
 
     <header id="header">
@@ -36,9 +37,9 @@
 
 
     <footer id="contact">
-        <h2 id="contact-header">Kontakt</h2>
+        <h2 id="contact-header">Contact</h2>
         <address id="contact-content">
-                Łukasz Badocha<br /> ul. Mostowa 6/13<br /> 31-061 Kraków</address><br />
+                Łukasz Badocha<br /> ul. Mostowa 6/13<br /> 31-061 Kraków</address>
         <p><a href="mailto:l.badocha@arena108.pl">l.badocha@arena108.pl</a>
         </p>
     </footer>
